<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMedic"
    android:background="@color/common_google_signin_btn_text_dark">

    <TextView
        android:id="@+id/textViewAddOrEditMedic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_medic"
        android:fontFamily="georgia"
        android:gravity="center"
        android:layout_marginBottom="18dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewAddOrEditMedic">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- EditText for name text input -->
            <TextView
                android:id="@+id/textViewNameOfMedic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_medic"
                android:fontFamily="georgia"/>

            <EditText
                android:id="@+id/editTextNameOfMedic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNameOfMedic"
                android:hint="@string/type_name_of_medic"
                android:singleLine="true"
                android:fontFamily="georgia">
            </EditText>

            <!-- EditText for description input -->

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextNameOfMedic"
                android:text="@string/description"
                android:paddingTop="12dp"
                android:fontFamily="georgia"/>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDescription"
                android:fontFamily="georgia"
                android:singleLine="true"
                android:hint="@string/type_description">
            </EditText>

            <!-- EditText for start time input -->

            <TextView
                android:id="@+id/textViewStartTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:fontFamily="georgia"
                android:layout_below="@+id/editTextDescription"
                android:text="@string/start_time" />

            <EditText
                android:id="@+id/editTextStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewStartTime"
                android:singleLine="true"
                android:inputType="time"
                android:fontFamily="georgia"
                android:hint="@string/enter_start_time" />

            <!-- EditText for start time input -->

            <TextView
                android:id="@+id/textViewInterval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:fontFamily="georgia"
                android:layout_below="@+id/editTextDescription"
                android:text="@string/start_time" />

            <EditText
                android:id="@+id/editTextInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewInterval"
                android:singleLine="true"
                android:inputType="time"
                android:fontFamily="georgia"
                android:hint="@string/enter_start_time" />


            <!-- EditText for start date input -->

            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:fontFamily="georgia"
                android:layout_below="@+id/editTextInterval"
                android:text="@string/interval_tv" />

            <EditText
                android:id="@+id/editTextStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewStartDate"
                android:inputType="date"
                android:fontFamily="georgia"
                android:hint="@string/interval"/>

            <!-- EditText for number input -->

            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextStartDate"
                android:text="@string/end_date"
                android:paddingTop="12dp"
                android:fontFamily="georgia"/>

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewEndDate"
                android:inputType="date"
                android:fontFamily="georgia"
                android:hint="@string/enter_end_date" />

            <!-- Some options with EditText -->

            <!-- Button to clear plain text input -->

            <!-- Button to show plain text input -->
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEndDate"
                android:text="@string/save"
                android:fontFamily="georgia"
                android:background="@drawable/bg_color"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/save"
                android:text="@string/clear"
                android:fontFamily="georgia"
                android:background="@drawable/bg_color"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>